hphp/test/slow/class-ptr/classptr-eager.php.expectf
vec(2) {
  class(Foo)
  class(Bar)
}
int(100)
int(10)
int(24)

Notice: Implicit Class to string conversion for type-hint in %s/test/slow/class-ptr/classptr-eager.php on line 38
string(3) "Foo"

Notice: Implicit Class to string conversion for type-hint in %s/test/slow/class-ptr/classptr-eager.php on line 26
string(3) "Bar"

Notice: Implicit Class to string conversion for type-hint in %s/test/slow/class-ptr/classptr-eager.php on line 19

Notice: Implicit Class to string conversion for type-hint in %s/test/slow/class-ptr/classptr-eager.php on line 39
string(3) "Bar"

Fatal error: Failure to resolve undefined class T in %s/test/slow/class-ptr/classptr-eager.php on line 41
